WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189434
contentfiltering tests leak documents
https://bugs.webkit.org/show_bug.cgi?id=189434
Summary
contentfiltering tests leak documents
Simon Fraser (smfr)
Reported
2018-09-07 14:49:29 PDT
All these tests leak documents: contentfiltering/block-after-add-data-then-deny-unblock.html [ Leak ] contentfiltering/block-after-add-data.html [ Leak ] contentfiltering/block-after-finished-adding-data-then-deny-unblock.html [ Leak ] contentfiltering/block-after-finished-adding-data.html [ Leak ] contentfiltering/block-after-response-then-deny-unblock.html [ Leak ] contentfiltering/block-after-response.html [ Leak ] contentfiltering/block-after-will-send-request-then-deny-unblock.html [ Leak ] contentfiltering/block-after-will-send-request.html [ Leak ]
Attachments
Patch
(3.16 KB, patch)
2019-02-21 13:11 PST
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-09-07 14:49:55 PDT
<
rdar://problem/44239943
>
Andy Estes
Comment 2
2019-02-21 13:11:03 PST
Created
attachment 362634
[details]
Patch
WebKit Commit Bot
Comment 3
2019-02-21 14:51:59 PST
Comment hidden (obsolete)
Comment on
attachment 362634
[details]
Patch Rejecting
attachment 362634
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 362634, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=362634&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=189434
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 362634 from
bug 189434
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=362634
Committed
r241906
: <
https://trac.webkit.org/changeset/241906
> Clearing flags on attachment: 362634 Committed
r241906
: <
https://trac.webkit.org/changeset/241906
> Received HTTP status 500 loading "None". Retrying in 10 seconds... Received HTTP status 500 loading "None". Retrying in 15.0 seconds... Updating OpenSource From
https://git.webkit.org/git/WebKit
0130c4d514a..6c59c146b8f master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 241900 = 0130c4d514ab52318c5bd3f0597fc6f8648f5dd8
r241903
= c1ba143d5a9f46a8a77260f2507ba45e67402583
r241904
= 69ff41c517bd62339b96856489db24bce2a0a290
r241905
= 6c59c146b8f2168614aee68c2434f6f18314ecc1 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Traceback (most recent call last): File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch", line 84, in <module> main() File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch", line 79, in main WebKitPatch(os.path.abspath(__file__)).main() File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/multicommandtool.py", line 305, in main result = command.check_arguments_and_execute(options, args, self) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/multicommandtool.py", line 123, in check_arguments_and_execute return self.execute(options, args, tool) or 0 File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/download.py", line 187, in execute self._process_patch(patch, options, args, tool) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/download.py", line 213, in _process_patch self._main_sequence.run_and_handle_errors(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/closepatch.py", line 36, in run self._tool.bugs.clear_attachment_flags(state["patch"].id(), comment_text) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/common/net/bugzilla/bugzilla.py", line 804, in clear_attachment_flags self.browser.submit() File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_mechanize.py", line 541, in submit return self.open(self.click(*args, **kwds)) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_mechanize.py", line 203, in open return self._mech_open(url, data, timeout=timeout) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_mechanize.py", line 255, in _mech_open raise response webkitpy.thirdparty.autoinstalled.mechanize._response.httperror_seek_wrapper: HTTP Error 500: Internal Server Error Full output:
https://webkit-queues.webkit.org/results/11237172
Andy Estes
Comment 4
2019-02-21 15:12:11 PST
Comment hidden (obsolete)
Committed
r241914
: <
https://trac.webkit.org/changeset/241914
>
Andy Estes
Comment 5
2019-02-21 20:32:52 PST
This was actually landed by the commit queue in
r241906
: <
https://trac.webkit.org/changeset/241906
> The error message in
comment #3
actually wasn't a rejection.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug