contentfiltering tests leak documents https://bugs.webkit.org/show_bug.cgi?id=189434 <rdar://44239943>

Reviewed by Simon Fraser.

Changed ContentFilter to capture the blocked Frame as a WeakPtr to break a reference cycle.

This fixes world leaks in several tests in LayoutTests/contentfiltering/.

* bindings/js/ScriptController.h:
* loader/ContentFilter.cpp:
(WebCore::ContentFilter::didDecide):


Canonical link: https://commits.webkit.org/209278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241906 268f45cc-cd09-0410-ab3c-d52691b4dbfc